base-installer (1.44) UNRELEASED; urgency=low

  [ Joey Hess ]
  * Add debconf template for debootstrap NEWBASE message. Closes: #349626
  * Add comments for translators describing all the SUBSTn.

  [ Frans Pop ]
  * Add debconf templates for debootstrap NEWREQUIRED and REDUNDANTBASE
    messages.
  * kernel/powerpc.sh: the version variable is no longer used.

 -- Frans Pop <fjp@debian.org>  Sat, 28 Jan 2006 21:02:31 +0100

base-installer (1.43) unstable; urgency=low

  [ Frans Pop ]
  * Fix empty option in initramfs generator list.
  * Add support for 2.6 kernels on alpha.
  * Fix kernel selection for alpha: arch_get_kernel_flavour needs to return
    a value for the postinst to generate a list of valid kernel images.

  [ Martin Michlmayr ]
  * Add support for 2.6 kernels on ARM.
  * Add support for NSLU2 (arm, armeb).
  * Add a test suite entry for mips/sb1-swarm-bn kernels.

  [ Steve Langasek ]
  * Add myself to uploaders.

 -- Steve Langasek <vorlon@debian.org>  Sat, 21 Jan 2006 21:55:53 -0800

base-installer (1.42) unstable; urgency=low

  [ Frans Pop ]
  * Fix typo in template names.

  [ Colin Watson ]
  * If an initramfs generator fails to install and we're installing sarge,
    then attempt to fall back to initrd-tools (closes: #344371).

  [ Frans Pop ]
  * Alternative solution for falling back to initrd-tools for sarge installs.
  * Also support -486 kernel image flavours for i386 as introduced with 2.6.15.
    Reliable detection of 486 processors is not possible, so continue treating
    386 and 486 as equivalent even if 386 is no longer supported.

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * Danish (da.po) by Claus Hindsgaul
  * German (de.po) by Jens Seidel
  * Greek, Modern (1453-) (el.po) by quad-nrg.net
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Finnish (fi.po) by Tapio Lehtonen
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Hebrew (he.po) by Lior Kaplan