@@ -3,11 +3,11 @@ cpuinfo crest.cpuinfo
 majors 2.4 2.6
 flavour amiga
 kernel-2.4 kernel-image-2.4.27-amiga
-kernel-2.6 kernel-image-2.6.8-amiga
+kernel-2.6 linux-image-2.6-amiga
 usable \
   kernel-image-2.2.25-amiga \
   kernel-image-2.4.27-amiga \
-  kernel-image-2.6.8-amiga
+  linux-image-2.6-amiga
 unusable \
   kernel-image-2.2.25-atari \
   kernel-image-2.2.25-bvme6000 \
@@ -20,11 +20,11 @@ unusable \
   kernel-image-2.4.27-mvme147 \
   kernel-image-2.4.27-mvme16x \
   kernel-image-2.4.27-q40 \
-  kernel-image-2.6.8-atari \
-  kernel-image-2.6.8-bvme6000 \
-  kernel-image-2.6.8-hp \
-  kernel-image-2.6.8-mac \
-  kernel-image-2.6.8-mvme147 \
-  kernel-image-2.6.8-mvme16x \
-  kernel-image-2.6.8-q40 \
-  kernel-image-2.6.8-sun3
+  linux-image-2.6-atari \
+  linux-image-2.6-bvme6000 \
+  linux-image-2.6-hp \
+  linux-image-2.6-mac \
+  linux-image-2.6-mvme147 \
+  linux-image-2.6-mvme16x \
+  linux-image-2.6-q40 \
+  linux-image-2.6-sun3
