@@ -9,6 +9,10 @@ base-installer (1.44) UNRELEASED; urgency=low
     messages.
   * kernel/powerpc.sh: the version variable is no longer used.
 
+  [ Stephen R. Marenka ]
+  * kernel/m68k.sh: updated to working with linux-image-*
+  * Updated m68k tests to use linux-image-*.
+
  -- Frans Pop <fjp@debian.org>  Sat, 28 Jan 2006 21:02:31 +0100
 
 base-installer (1.43) unstable; urgency=low
